# 2026-ysjin-Diet_record_db

./: .gitignore  MAPPING_README.md  README.md  pyproject.toml
db/fndds/FNDDS_2021-2023_SAS/: addfooddesc.csv  addfooddesc.sas7bdat  derivdesc.csv  derivdesc.sas7bdat  fnddsingred.csv  foodportiondesc.csv  foodportiondesc.sas7bdat  foodweights.csv  foodweights.sas7bdat  mainfooddesc.csv  mainfooddesc.sas7bdat  moistadjust.csv  moistadjust.sas7bdat  nutdesc.csv  nutdesc.sas7bdat
db/ployphenol/: compounds-classification.xls  foods-classification.xls  foods.xls  publications.xls
record/Raw/: record_meta.xlsx
script/: build_fndds_db.py  chatgpt_example.py  convert_pdf_to_jpg.py  fndds_record_mapping.py  parse_dietary_record.py  read_sas_file.py
